app/assets/stylesheets/layout.sass
.navbar-brand img
  width: 40px
  display: inline-block
.navbar-brand span  
  font-size: 46px
  position: relative
  top: 8px
  color: #000

.nav > li > a 
  padding: 10px 15px
  font-size: 14px

.main-navbar
  position: relative
  z-index: 2
.header_white_space
  height: 150px
.language
  display: inline-block
.mobile
  display: inline-block
  width: 200px
  img
    width: 100%
.email_register
  .form-control
    background-color: transparent    
    width: 300px
    color: #fff
  .btn
    width: 100px
    background: #ff9900
    border: none
    color: #fff
    &:hover
      background: #FED136
  .form-control, .btn  
    height: 40px
    border-radius: 0

  label
    font-weight: normal
    color: #000

.team
  &_memeber
    width: 300px  
    position: relative
  &_images
    width: 300px
    height: 300px
    border-radius: 100%
    background-position: center center
    background-size: cover
    margin: 0 auto
  .mem1
    background-image: asset_url('1.jpg')
  .mem2
    background-image: asset_url('2.jpg')
  .mem3
    background-image: asset_url('3.jpg')


header
  height: 660px
  position: relative
  section
    padding: 0
  .container
    position: relative
    top: 150px
  &-element
    position: relative
  .language
    position: absolute
    top: 90px
    right: 230px
    font-size: 16px
    color: #000

  input[type="text"]::-webkit-input-placeholder 
    color: #fff


  input[type="text"]:-moz-placeholder  
    color: #fff  


  input[type="text"]::-moz-placeholder   
    color: #fff  


  input[type="text"]:-ms-input-placeholder   
    color: #fff  
 

section
  padding: 0px
#team
  margin-top: -80px
  padding-bottom: 60px
.section-heading
  font-weight: normal
  font-size: 30px 
  margin-bottom: 20px
  padding: 30px 0px
  text-transform: capitalize
.story-prsn-name
  font-size: 25px
.team_member
  padding: 0 20px
.team_member h4
  line-height: 0.4
.team_member p
  text-align: center
  font-size: 16px
  line-height: 24px
.team_images
  width: 280px
  height: 280px
.dark-grey
  background-color: #DDD 

.node-bomb-community
  text-align: center
.node-bomb-community p
  font-size: 18px
  line-height: 25px
  margin-top: 10px
  padding: 0 23px


.community-row
  margin-left: -35px
  margin-right: -35px 

#community
  padding: 30px 0px 50px

.community-section-heading
  margin-bottom: 40px
  text-transform: capitalize
  font-weight: normal
  font-size: 35px

.community-btns
  font-size: 70px
  padding: 35px
  border-radius: 50%
  color: #fff
  margin: 0 auto
  height: 170px
  width: 170px

.suitcase
  background-color: #01A33E
.users
  background-color: #01A0C7
.comments
  background-color: #FE0000
.dollor
  background-color: #0060B6
.service-heading
  font-size: 55px
  color: #676767
  padding-top: 180px
  min-height: 400px

#contact, #staff, #about
  .section-heading
    border-bottom: 1px solid #f3f3f3 
  .form-control
    border-radius: 0
  .addressblock
    color: #f0f0f0
    border-bottom: 1px solid #ccc
    margin-bottom: 20px
    padding-bottom: 10px

    & > p:first-child
      color: #ff9900
      font-weight: bold

/* staff contents css start here */

#staff 
  section
    height: 540px
    position: relative
  .col-md-6
    height: 100%
.staff-info
  height: 100%
  width: 100%
  text-align: center
  padding: 30px
  margin-top: 90px
  h2
    padding-bottom: 10px
  p
    padding-top: 20px
    font-size: 17px

.staff-img
  height: 100%

  img
    height: 100%

.bg-gery
  background-color: #F1F1F1
.name-border
  margin: 0 auto
  width: 30px
  border-bottom: 5px solid #ff9900

.country-name
  font-size: 20px
  font-weight: normal


.heading-bg
  background: #333

/* About pages css start here */
.about-sec
  padding: 40px 0px 50px
.about-img
  margin-top: 25px
  img
    width: 100%
.about-content,
.last-p
  h2
    margin-bottom: 30px
  p
    font-size: 16px
    margin-bottom: 0px

